# backdoor-poc

./: .gitignore  LICENSE.txt  PACKAGE_SUMMARY.md  README.md  code_enhancer.py  network_log.txt  pyproject.toml
config/: enhancer_config.json
docs/: API.md  INSTALLATION.md
server/: server.py
src/: __init__.py  config_manager.py  main.py  network_utils.py
src/code_enhancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: __init__.py  test_main.py  test_optimizer.py
